# CalcTestsHomeTask

./: CMakeLists.txt  ICalculator.h  InMemoryHistory.cpp  README.md  SimpleCalculator.cpp  SimpleCalculator.h
.github/workflows/: coverage.yml
tests/: CalcBaseOperationsTests.cpp  CalcBoundaryOperationsTests.cpp  HistoryTests.cpp
tests/Mocks/: CalculatorMock.h  IHistoryMock.h
